<resources>
    <string name="app_name">LaundryAssesment</string>
    <string name="laundry">Ummam Laundry</string>
    <string name="paketBulanan">Paket Bulanan</string>
    <string name="penjelasan">Aplikasi Laundry untuk Menghitung harga laundr satu bulan dengan Berat cucian 20 Kg perbulan</string>
    <string name="total">%1$.0f</string>
    <string name="harga">Harga</string>
    <string name="totalHarga">Total Harga</string>
    <string name="bulanan_invalid">Isi Paket Tidak Boleh Kosong</string>
    <string name="ucapan">Terima Kasih Telah Berlangganan di Laundry kami.\n\n
    Kami Harap Bapak/Ibu Puas dengan layanan kami.\n\n
    contact :\n
    wa    : 08222222222\n
    ig    : @laundry</string>
    <string name="next">Next</string>
    <string name="copyright">Aplikasi Laundry ini merupakan  aplikasi Android dari Ummam Laundry untuk  menghitung Harga dari berapa bulan pelanggan akan berlangganan laundry pakaian.
        \nTemukan kode aplikasi di https://github.com/ummam/Perhitungan-Laundry.git
        \n\nMochammad Chairu Ummam</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">SHARE</string>
    <string name="bagikan_template">Harga Paket dengan langganan %1$s bulan dengan harga Laundry = %2$s jangan lupa mampir di @Ummam Laundry</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="history">History</string>
    <string name="bulanan_x">Bulanan: %1$.0f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

</resources>